recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:6: error: missing arguments for method current in class Tree;
follow this method with `_' if you want to treat it as a partially applied function
    current step
    ^